public/stylesheets/sass/lootfactor.sass
@import constants.sass

// IPB Style overrides --------------------------------------------------------
ul#section_links
  li
    // border-right: 1px solid #CCC
    margin: 0 5px
  li.last
    border-right: 0
    margin: 0

.row1 td, .row2 td
  background-color: transparent !important

.ipb_table
  border-spacing: 0 !important

// Override WoW class styling -------------------------------------------------
.Death_Knight, .Death, .Knight, .Deathknight, .Druid, .Hunter, .Mage, .Paladin, .Shaman, .Priest, .Rogue, .Warlock, .Warrior
  &, &:link, &:visited
    font-weight: normal
    background: none
    padding-left: 0
  #breadcrumb &
    font-weight: bold

#ipbwrapper .q1, #ipbwrapper .q1 a, .ac_results .q1, .ac_results .q1 a
  color: #000000 !important

span.larger
  font-size: 110%
span.smaller
  font-size: 85%

// Success/Failure flash notice divs ------------------------------------------
.positive
  color: $positive_color
.negative
  color: $negative_color

div.message
  a
    text-decoration: none
div.message.success
  cursor: pointer
  margin: 10px 0
div.message.error
  margin: 10px 0
  .errorExplanation
    ul
      list-style-type: disc
      li
        margin-left: 15px

#server_error
  .error
    margin: 100px auto
    padding: 75px 50px
    width: 50%
    -moz-border-radius: 25px
    -webkit-border-radius: 25px
    background-color: #FFFFFF
    border-color: #000000
    span
      font-size: 3em

noscript
  .error
    font-size: 1.5em
    font-weight: bold

// Tooltip --------------------------------------------------------------------
#tooltip
  position: absolute
  z-index: 3000
  border: 1px solid
    color: $notice_border_color
  background-color: $notice_background
  padding: 5px
  -moz-border-radius: 5px
  -webkit-border-radius: 5px

#tooltip
  h3, div
    margin: 0
    color: #000000
  h3
    font-size: 1em

// Index#index
body.index_root
  .record_group
    min-width: 317px
    display: block
    float: left
    margin: 6px 0 12px 2px
    h4
      margin: 4px 0 4px 0

// Attendance#show
body.attendance_raids_root
  h2
    font-size: 1.3em
    padding: 15px 15px 15px 43px
    -moz-border-radius: 5px
    -webkit-border-radius: 5px
    border:
      width: 1px
      style: solid
    a
      color: #281B1B
      text-decoration: none
      font-weight: bold
    &.pending
      background: #FFFCD7 url(/images/hourglass_large.png) no-repeat scroll 5px 10px
      border-color: #E3D2B2
    &.active
      background: #F1F6EC url(/images/stop_large.png) no-repeat scroll 5px 10px
      border-color: #B0CE94
    &.completed
      background: #FFFCD7 url(/images/comment_add_large.png) no-repeat scroll 5px 10px
      border-color: #E3D2B2

// Members#show ---------------------------------------------------------------
body.members_root
  #member_stats
    text-align: center
    h3
      display: inline
      font: 3em Georgia
      margin: 0
      span.small
        vertical-align: middle
        font: 14px "Georgia", "serif"
        margin: 0 60px 0 -3px
  #wishlists
    .wishlist
      span
        color: #888
        font-size: 0.85em

// Raids#show -----------------------------------------------------------------
body.raids_root
  #attendees
    h4
      font-weight: bold
      padding-left: 22px
      background-repeat: no-repeat
      background-position: center left
      margin: 15px 0 3px 0
      a
        text-decoration: none
    h4.Death_Knight
      background-image: url(/images/classes/death_knight.gif)
    h4.Druid
      background-image: url(/images/classes/druid.gif)
    h4.Hunter
      background-image: url(/images/classes/hunter.gif)
    h4.Mage
      background-image: url(/images/classes/mage.gif)
    h4.Paladin
      background-image: url(/images/classes/paladin.gif)
    h4.Priest
      background-image: url(/images/classes/priest.gif)
    h4.Rogue
      background-image: url(/images/classes/rogue.gif)
    h4.Shaman
      background-image: url(/images/classes/shaman.gif)
    h4.Warlock
      background-image: url(/images/classes/warlock.gif)
    h4.Warrior
      background-image: url(/images/classes/warrior.gif)

    // Break after 5 classes
    div#Priest
      clear: left

    .class_group
      width: 160px
      display: block
      float: left
      margin: 10px 0 20px 25px
      h4
        margin: 0
      ul
        list-style-type: none
        li
          width: 100%
          padding: 2px 0
          span
            float: right
  #drops
    clear: left

// Wishlists#index ------------------------------------------------------------
body.wishlists_root
  .author_info
    ul
      padding: 0 0 10px 0
      li
        padding: 0 0 0 15px
  .post_body
    p.posted_info
      font-size: 1.3em
      font-weight: bold
      a
        text-decoration: none
      img
        float: right
    table
      margin-bottom: 15px
      border-bottom: 3px solid #C1C1C1
    div.notice
      margin: 10px
      padding: 10px
      -moz-border-radius: 2px
      -webkit-border-radius: 2px
      background-color: $notice_background
      border: 1px solid
        color: $notice_border_color
      color: #000000
      a
        color: #000000

// Autocomplete ---------------------------------------------------------------
.ac_results
  padding: 0px
  border: 1px solid black
  background-color: white
  overflow: hidden
  z-index: 99999

  ul
    width: 100%
    list-style-position: outside
    list-style: none
    padding: 0
    margin: 0

  li
    margin: 0px
    padding: 2px 5px
    cursor: default
    display: block
    font: menu
    font-size: 12px
    line-height: 16px
    overflow: hidden

    img
      float: left
      margin-right: 5px

.ac_loading
  background: white url(/images/indicator.gif) right center no-repeat

.ac_odd
  background-color: #eee

.ac_over
  background-color: #0A246A
  color: white

// Forms ----------------------------------------------------------------------
@import formtastic_base.sass
@import skintastic.sass
form.formtastic
  +stack-form
  .wishlist_priority
    +float-inputs(20px, 1.4em)
  fieldset.submit
    padding: 15px 0 !important
    text-align: center
  input.update
    background: #e36d2c url(http://www.juggernautguild.com/public/style_images/splat/input_submit.png) repeat-x scroll 0 50%
    color: #fff
    border: 1px solid #b2531f
    font-weight: bold
    font-size: 0.85em
    text-decoration: none
    border-width: 1px
    border-style: solid
    padding: 3px 9px
    overflow: visible
    cursor: pointer
    -moz-border-radius: 2px
    -webkit-border-radius: 2px

    &:hover
      background: #e7834b url(http://www.juggernautguild.com/public/style_images/splat/input_submit.png) repeat-x scroll 0 50%

// Tables ---------------------------------------------------------------------
table.ipb_table
  // // Table Cell Types
  th.number, td.number, th.right, td.right
    text-align: right
    float: none !important
  th.note, td.note
    text-align: left
    width: 75%
  th.member, td.member
    text-align: left
    min-width: 150px
  th.item, td.item
    text-align: left
    min-width: 250px
  th.attendance, td.attendance
    text-align: right
    min-width: 80px
  th.date, td.date
    text-align: left
    min-width: 125px
  td.date
    font-size: 1em
  th.lootfactor, td.lootfactor
    text-align: right
    min-width: 50px
  th.image, td.image, th.checkbox, td.checkbox
    text-align: center
    min-width: 16px
    max-width: 48px
    padding: 0
  th.icon, td.icon
    text-align: center
    width: 16px
    padding: 0
  th.bullet, td.bullet
    text-align: center
    width: 16px
    padding: 2px
  th.center, td.center
    text-align: center
  tr.user_missing
    td
      background-color: #F3DDDD
      border-color: #DEB7B7

  thead
    tr
      background: #f0f0f0
      color: #838383
      text-shadow: #fff 0px 1px 0px

      th
        color: #838383
        border-top: 1px solid #fff
        border-bottom: 1px solid #e4e4e4
    a
      color: #838383

  tbody.filterable
    tr
      span
        padding-right: 16px
        &:hover
          background: url(/images/bullet_left.png) no-repeat center right
          text-decoration: underline
          cursor: pointer
    tr.filtering
      span
        background: url(/images/bullet_delete.png) no-repeat center right

  // TableSorter
  &.tablesorter
    thead
      tr
        .header
          background:
            image: url(/images/sort_bg.gif)
            repeat: no-repeat
            position: center right
          cursor: pointer
        .headerSortUp
          background-image: url(/images/sort_asc.gif)
        .headerSortDown
          background-image: url(/images/sort_desc.gif)
        th.note, th.attendance, th.lootfactor, th.number, th.right
          padding-right: 20px

// Pagination -----------------------------------------------------------------
div.pagination
  height: 30px
  padding: 0
  margin: 5px 0 0 0
  a, span, em
    color: #838383
    display: block
    font-weight: bold
    padding: 4px 7px
    text-decoration: none
    -moz-border-radius: 3px
    -webkit-border-radius: 3px
    background: #E4E4E4 url(http://www.juggernautguild.com/public/style_images/splat/page.png) repeat-x scroll 0 50%
    float: left
    font-size: 0.9em
    margin: 0 2px 0 0

    &.disabled
      background-color: #FFFFFF
      color: #838383

  a
    &.current, &:hover
      background-color: #E9712D
      color: #FFFFFF
  span.current, em
    font-style: normal
    background-color: #E9712D
    color: #FFFFFF
  .gap
    background: transparent

  .twitter_pagination
    display: block
    text-align: center
    padding: 10px 10px
    width: 98%

// Progress Bars --------------------------------------------------------------
div.progress-container
  border: 1px solid #ccc
  width: 90%
  margin: 0
  padding: 0
  float: left
  background: white
  div
    height: 12px
span.progress
  line-height: 12px
  padding-left: 5px

// Tabs -----------------------------------------------------------------------
.ui-tabs
  .ui-tabs-nav
    li.ui-tabs-selected
      background-color: #cd5316
      font-weight: bold
      -moz-border-radius: 3px 3px 0 0
      -webkit-border-top-left-radius: 3px
      -webkit-border-top-right-radius: 3px
      a
        color: #FFFFFF
  // Hidden tab content
  .ui-tabs-hide
    display: none !important

